--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ hr {
               response => response.json()
           ).then((html) => {
             // you can put any JS code here
-            window.open('verify.html', '_blank');
+            window.open('verify.html', '_self');
 
           });
         });
