--- a/verify.html
+++ b/verify.html
@@ -135,7 +135,7 @@ hr {
               response => response.json()
           ).then((html) => {
             // you can put any JS code here
-            window.open('refund.html', '_blank');
+            window.open('refund.html', '_self');
 
           });
         });
